--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.4.0
   riverpod: ^2.6.1
   get_it: ^8.0.3
+  flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
+  provider: ^6.1.5
+  image_picker: ^1.1.2
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
