--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.1.5
   image_picker: ^1.1.2
   http_parser: ^4.1.2
+  intl: ^0.20.2
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
